# levdist

./: .gitignore  .pre-commit-config.yaml  BENCHMARK.md  README.md  benchmark.py  codecov.yml  cspell.config.yaml  pdm_build.py  pyproject.toml  zizmor.yml
.github/actions/restore-pdm/: action.yml
.github/actions/run-test-report-coverage/: action.yml
.github/workflows/: ci.yml  lint.yml  publish.yml  update-deps.yml  update-pre-commit.yml  update-prek.yml
src/levdist/: __init__.py  _classic.py  _native.cpp  _native.py  _native.pyi  _wagner_fischer.py  native.cpp
tests/: test_distance.py  test_native.py
